--- a/react-sorting-hat/src/Components/Result.css
+++ b/react-sorting-hat/src/Components/Result.css
@@ -4,10 +4,11 @@
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    
 
 }
 
-.results-container-crest {
+.results-container .results-container-crest {
     display:flex;
     flex-direction: column;
     justify-content: center;
