--- a/react-sorting-hat/src/Components/SortingHat.css
+++ b/react-sorting-hat/src/Components/SortingHat.css
@@ -11,7 +11,7 @@
 
 }
 .quiz_container {
-    background-color:  rgb(241, 231, 231, .7);
+    background-color:  rgba(241, 231, 231, .7);
     width: 80%;
     height: auto;
     display: flex;
