results styling fixed for mobile

--- a/react-sorting-hat/src/Components/Result.css
+++ b/react-sorting-hat/src/Components/Result.css
@@ -1,35 +1,84 @@
-.results-container {
-    background-image: url("../images/sortinghat.jpg");
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    
+@media (min-width: 491px) {
 
+    .results-container {
+        background-image: url("../images/sortinghat.jpg");
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        
+
+    }
+
+    .results-container .results-container-crest {
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 30px;
+        border: 1px solid white;
+        background-color:  rgba(20, 16, 16, 0.7);
+        width: 90%;
+    }
+    .house-crest {
+        margin: 50px;
+        height: 500px;
+    }
+
+    .sorted {
+        font-size: 2.4em;
+        color: ivory;
+        margin: 20px;
+        text-align: center;
+
+    }
+    .sorted span {
+        font-family: "Mystery Quest";
+        font-size: 2.2em;
+        color: rgb(205, 205, 192);
+    }
 }
 
-.results-container .results-container-crest {
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 30px;
-    border: 1px solid white;
-    background-color:  rgba(20, 16, 16, 0.7);
-    height: 95vh;
-}
-.house-crest {
-    margin: 50px;
-    height: 500px;
-}
+@media (min-width: 0px) and (max-width: 490px){
 
-.sorted {
-    font-size: 48px;
-    color: ivory;
-    margin: 20px;
-}
-.sorted span {
-    font-family: "Mystery Quest";
-    font-size: 64px;
-    color: rgb(205, 205, 192);
+    .results-container {
+        background-image: url("../images/sortinghat.jpg");
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        
+
+    }
+
+    .results-container .results-container-crest {
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 30px;
+        border: 1px solid white;
+        background-color:  rgba(20, 16, 16, 0.7);
+        width: 90%;
+    }
+    .house-crest {
+        margin: 20px;
+        height: 300px;
+    }
+
+    .sorted {
+        font-size: 1.2em;
+        color: ivory;
+        margin: 20px;
+        text-align: center;
+
+    }
+    .sorted span {
+        font-family: "Mystery Quest";
+        font-size: 2.2em;
+        color: rgb(205, 205, 192);
+    }
+
 }
