changed alignment on ul

--- a/react-sorting-hat/src/Components/SortingHat.css
+++ b/react-sorting-hat/src/Components/SortingHat.css
@@ -39,7 +39,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         padding: 10px;
     }
     li {
@@ -102,7 +102,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         padding: 10px;
 
 
